[project]
name = "qm-scan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "pyqtgraph>=0.14.0",
    "pyside6>=6.10.1",
    "pyvisa>=1.15.0",
    "pyvisa-py>=0.8.1",
    "scipy>=1.16.3",
    "snapi>=1.1.2",
]
